--- a/doc/sphinx/templates/index.html
+++ b/doc/sphinx/templates/index.html
@@ -5,12 +5,10 @@
   <p>
 	Yade is an extensible open-source framework for discrete numerical models, focused on Discrete Element Method. The computation parts are written in c++ using flexible object model, allowing independent implementation of new alogrithms and interfaces. Python is used for rapid and concise scene construction, simulation control, postprocessing and debugging.
   <p>
-  Yade is located at <a href="https://www.yade-dem.org">www.yade-dem.org</a>, which contains <a href="https://www.yade-dem.org/doc/">this documentation</a> and <a href="https://www.yade-dem.org/wiki/">wiki</a>. Development is kindly hosted on <a href="http://www.launchpad.net/yade">launchpad</a> and <a href="https://github.com/yade"> GitHub </a>; they are used for <a href="https://github.com/yade/trunk">source code</a>, <a href="http://bugs.launchpad.net/yade">bug tracking</a> and <a href="https://launchpad.net/yade/+download">source</a> downloads</a> and more. Building, regression tests and packages distribution run on servers of the <a href="http://geomec.net/newsletter/">Grenoble Geomechanics group</a>  at <a href="https://www.3sr-grenoble.fr/spip.php?rubrique1">Laboratoire 3SR</a>.  
+  Yade is located at <a href="https://www.yade-dem.org">www.yade-dem.org</a>, which contains <a href="https://www.yade-dem.org/doc/">this documentation</a> and <a href="https://www.yade-dem.org/wiki/">wiki</a>. Development is kindly hosted on <a href="http://www.launchpad.net/yade">launchpad</a> and <a href="https://gitlab.com/yade-dev"> GitLab </a>; they are used for <a href="https://gitlab.com/yade-dev/trunk">source code</a>, <a href="http://bugs.launchpad.net/yade">bug tracking</a> and <a href="https://launchpad.net/yade/+download">source</a> downloads</a> and more. Building, regression tests and packages distribution are hosted on servers of the <a href="http://geomec.net/newsletter/">Grenoble Geomechanics group</a>  at <a href="https://www.3sr-grenoble.fr/spip.php?rubrique1">Laboratoire 3SR</a> and <a href="https://gricad.univ-grenoble-alpes.fr"> UMS Gricad UMS</a>.  
   </p>
   <p>
-  Since March 2012 Yade is using GIT as VCS and placing the source code on 
-  <a href="https://github.com/yade/trunk">github</a>. The Launchpad is importing
-  source code several times per day.
+  Since March 2012 Yade is using GIT as VCS. The main branches are currently on  <a href="https://gitlab.com/yade-dev/trunk">GitLab</a> (migrated from GitHub in January 2019).
   </p>
   <p>
    Please make sure you read the <a href="{{ pathto("citing") }}">"Acknowledging Yade"</a> section if you plan to cite Yade in publications.
