--- a/doc/sphinx/templates/layout.html
+++ b/doc/sphinx/templates/layout.html
@@ -23,15 +23,14 @@
 \let\vec\boldsymbol % vector
 \let\tens\boldsymbol % tensor
 
-\def\normalized#1{\widehat{#1}}
-\def\locframe#1{\widetilde{#1}}
+%normalized and locfram here
 
 % timestep
 \def\Dt{\Delta t}
 \def\Dtcr{\Dt_{\rm cr}}
 
 % algorithm complexity
-\def\bigO#1{\ensuremath{\mathcal{O}(#1)}}
+
 
 % variants for greek symbols
 \let\epsilon\varepsilon
@@ -43,11 +42,6 @@
 \let\eps\epsilon
 
 % variables at different points of time 
-\def\prev#1{#1^-}
-\def\pprev#1{#1^\ominus}
-\def\curr#1{#1^{\circ}}
-\def\nnext#1{#1^\oplus}
-\def\next#1{#1^+}
 
 % shorthands for geometry
 \def\currn{\curr{\vec{n}}}
@@ -68,8 +62,8 @@
 \def\curraaccel{\curr{\dot{\vec{\omega}}}}
 \def\pprevangvel{\pprev{\vec{\omega}}}
 \def\nnextangvel{\nnext{\vec{\omega}}}
-\def\loccurr#1{\curr{\locframe{#1}}}
 
+%loccurr here
 
 \def\numCPU{n_{\rm cpu}}
 \DeclareMathOperator{\Align}{Align}
@@ -77,13 +71,7 @@
 
 
 % sorting algorithms
-\def\isleq#1{\currelem{#1}\ar@/^/[ll]^{\leq}}
-\def\isnleq#1{\currelem{#1}\ar@/^/[ll]^{\not\leq}}
-\def\currelem#1{\fbox{$#1$}}
-\def\sortSep{||}
-\def\sortInv{\hbox{\phantom{||}}}
-\def\sortlines#1{\xymatrix@=3pt{#1}}
-\def\crossBound{||\mkern-18mu<}
+
     \)
     </div>
     {{ super() }}
