--- a/doc/sphinx/templates/layout.html
+++ b/doc/sphinx/templates/layout.html
@@ -24,13 +24,15 @@
 \let\tens\boldsymbol % tensor
 
 %normalized and locfram here
+\def\normalized#1{\widehat{#1}}
+\def\locframe#1{\widetilde{#1}}
 
 % timestep
 \def\Dt{\Delta t}
 \def\Dtcr{\Dt_{\rm cr}}
 
 % algorithm complexity
-
+\def\bigO#1{\ensuremath{\mathcal{O}(#1)}}
 
 % variants for greek symbols
 \let\epsilon\varepsilon
@@ -41,7 +43,12 @@
 \let\sig\sigma
 \let\eps\epsilon
 
-% variables at different points of time 
+% variables at different points of time
+\def\prev#1{#1^-}
+\def\pprev#1{#1^\ominus}
+\def\curr#1{#1^{\circ}}
+\def\nnext#1{#1^\oplus}
+\def\next#1{#1^+}
 
 % shorthands for geometry
 \def\currn{\curr{\vec{n}}}
@@ -62,8 +69,7 @@
 \def\curraaccel{\curr{\dot{\vec{\omega}}}}
 \def\pprevangvel{\pprev{\vec{\omega}}}
 \def\nnextangvel{\nnext{\vec{\omega}}}
-
-%loccurr here
+\def\loccurr#1{\curr{\locframe{#1}}}
 
 \def\numCPU{n_{\rm cpu}}
 \DeclareMathOperator{\Align}{Align}
@@ -71,6 +77,12 @@
 
 
 % sorting algorithms
+\def\isleq#1{\currelem{#1}\ar@/^/[ll]^{\leq}}
+\def\isnleq#1{\currelem{#1}\ar@/^/[ll]^{\not\leq}}
+\def\currelem#1{\fbox{$#1$}}
+\def\sortSep{||}
+\def\sortInv{\hbox{\phantom{||}}}
+\def\sortlines#1{\xymatrix@=3pt{#1}}
 
     \)
     </div>
