--- a/doc/sphinx/templates/layout.html
+++ b/doc/sphinx/templates/layout.html
@@ -35,7 +35,7 @@
 
 % symbols
 \let\mat\boldsymbol % matrix
-\let\vec\boldsymbol % vector
+\renewcommand{\vec}{\boldsymbol}
 \let\tens\boldsymbol % tensor
 
 %normalized and locfram here
@@ -47,7 +47,7 @@
 \def\Dtcr{\Dt_{\rm cr}}
 
 % algorithm complexity
-\def\bigO#1{\ensuremath{\mathcal{O}(#1)}}
+\def\bigO#1{{\mathcal{O}(#1)}}
 
 % variants for greek symbols
 \let\epsilon\varepsilon
