[Python3] Write doc for python3.

--- a/doc/sphinx/templates/index.html
+++ b/doc/sphinx/templates/index.html
@@ -8,6 +8,9 @@
   Yade is located at <a href="https://yade-dem.org">yade-dem.org</a>, which contains <a href="https://www.yade-dem.org/doc/">this documentation</a> and <a href="https://www.yade-dem.org/wiki/">wiki</a>. Development is kindly hosted on <a href="http://www.launchpad.net/yade">launchpad</a> and <a href="https://gitlab.com/yade-dev"> GitLab </a>; they are used for <a href="https://gitlab.com/yade-dev/trunk">source code</a>, <a href="https://gitlab.com/yade-dev/trunk/issues">bug tracking</a> and <a href="https://launchpad.net/yade/+download">source</a> downloads</a> and more. Building, regression tests and packages distribution are hosted on servers of the <a href="http://geomec.net/newsletter/">Grenoble Geomechanics group</a>  at <a href="https://www.3sr-grenoble.fr/spip.php?rubrique1">Laboratoire 3SR</a> and <a href="https://gricad.univ-grenoble-alpes.fr"> UMS Gricad</a>.  
   </p>
   <p>
+  Since May 2019 python 3 replaces python 2 in Yade. See <a href="{{ pathto("installation") }}#prerequisites">installation prerequisites</a> to install new python 3 dependencies, <a href="{{ pathto("installation") }}#python-2-backward-compatibility">Python 2 backward compatibility installation</a> to force the python version you want to use, and <a href="{{ pathto("tutorial-advanced") }}#convert-python-2-scripts-to-python-3">convert-python-2-scripts-to-python-3 section </a> for informations about converting your scripts.
+  </p>
+  <p>
   Since March 2012 Yade is using GIT as VCS. The main branches are currently on  <a href="https://gitlab.com/yade-dev/trunk">GitLab</a> (migrated from GitHub in January 2019).
   </p>
   <p>
