mathjax fix: \renewcommand{\mat}{\boldsymbol} - show matrix properly in FEMxDEM and other places.

--- a/doc/sphinx/templates/layout.html
+++ b/doc/sphinx/templates/layout.html
@@ -34,9 +34,9 @@
 \hypersetup{pdfkeywords={Discrete element method, granular materials, contact law, hydromechanical coupling}}
 
 % symbols
-\let\mat\boldsymbol % matrix
+\renewcommand{\mat}{\boldsymbol}
 \renewcommand{\vec}{\boldsymbol}
-\let\tens\boldsymbol % tensor
+\renewcommand{\tens}{\boldsymbol}
 
 %normalized and locfram here
 \def\normalized#1{\widehat{#1}}
