--- a/doc/sphinx/templates/index.html
+++ b/doc/sphinx/templates/index.html
@@ -3,7 +3,7 @@
 {% block body %}
   <h1>Welcome to Yade - Open Source Discrete Element Method</h1>
   <p>
-	Yade is an extensible open-source framework for discrete numerical models, focused on Discrete Element Method. The computation parts are written in c++ using flexible object model, allowing independent implementation of new alogrithms and interfaces. Python is used for rapid and concise scene construction, simulation control, postprocessing and debugging.
+	Yade is an extensible open-source framework for discrete numerical models, focused on Discrete Element Method. The computation parts are written in c++ using flexible object model, allowing independent implementation of new algorithms and interfaces. Python is used for rapid and concise scene construction, simulation control, postprocessing and debugging.
   <p>
   Yade is located at <a href="https://yade-dem.org">yade-dem.org</a>, which contains <a href="https://www.yade-dem.org/doc/">this documentation</a> and <a href="https://www.yade-dem.org/wiki/">wiki</a>. Development is kindly hosted on <a href="http://www.launchpad.net/yade">launchpad</a> and <a href="https://gitlab.com/yade-dev"> GitLab </a>; they are used for <a href="https://gitlab.com/yade-dev/trunk">source code</a>, <a href="https://gitlab.com/yade-dev/trunk/issues">bug tracking</a> and <a href="https://launchpad.net/yade/+download">source</a> downloads</a> and more. Building, regression tests and packages distribution are hosted on servers of the <a href="http://geomec.net/newsletter/">Grenoble Geomechanics group</a>  at <a href="https://www.3sr-grenoble.fr/spip.php?rubrique1">Laboratoire 3SR</a>, <a href="https://gricad.univ-grenoble-alpes.fr">UMS Gricad</a> and <a href="https://pg.edu.pl/">Gdańsk University of Technology</a>.
   </p>
