Skip url ping-pong for "getting help" page

--- a/doc/sphinx/templates/index.html
+++ b/doc/sphinx/templates/index.html
@@ -31,13 +31,13 @@
            <span class="linkdescr">information about the people working on Yade</span></p>
         <p class="biglink"><a class="biglink" href="https://www.yade-dem.org/doc/publications.html">Publications</a><br/>
            <span class="linkdescr">on Yade itself or done with Yade</span></p>
-        <p class="biglink"><a class="biglink" href="https://yade-dem.org/wiki/Contact">Public Mailing Lists</a><br/>
-           <span class="linkdescr">Discussions between users and developpers</span></p>
+        <p class="biglink"><a class="biglink" href="https://yade-dem.org/doc/user.html#getting-help">Public Mailing Lists</a><br/>
+           <span class="linkdescr">Getting help and discussions</span></p>
         <p class="biglink"><a class="biglink" href="{{ pathto("citing") }}">Acknowledging Yade</a><br/>
            <span class="linkdescr">How to cite Yade in publications</span></p>
       </td>
       <td width="50%">
-        <p class="biglink"><a class="biglink" href={{ pathto("consulting") }}>Support and Consulting</a><br/>
+        <p class="biglink"><a class="biglink" href={{ pathto("consulting") }}>Paid support and Consulting</a><br/>
            <span class="linkdescr">Need professional help?</span></p>
         <p class="biglink"><a class="biglink" href="https://answers.launchpad.net/yade">Questions and answers</a><br/>
            <span class="linkdescr">Users questions, hosted at launchpad</span></p>
