--- a/doc/sphinx/templates/index.html
+++ b/doc/sphinx/templates/index.html
@@ -45,8 +45,8 @@
            <span class="linkdescr">A less formal place to report results and more, worth a look</span></p>
         <p class="biglink"><a class="biglink" href="https://yade-dem.org/wiki/WhoIsDoingWhat">Who Is Doing What (Wiki)</a><br/>
            <span class="linkdescr">you may introduce yourself here</span></p>
-        <p class="biglink"><a class="biglink" href="https://yade-dem.org/wiki/Screenshots_and_videos">Screenshots and videos (Wiki)</a><br/>
-           <span class="linkdescr">Simulation examples (wiki); feel free to add yours.</span></p>
+        <p class="biglink"><a class="biglink" href="https://yade-dem.org/doc/tutorial-more-examples.html">Screenshots and videos</a><br/>
+           <span class="linkdescr">Simulation examples; feel free to add yours.</span></p>
       </td>
     </tr>
  </table>
